--- a/README
+++ b/README
@@ -1,7 +1,18 @@
-Rails Devise Roles
-========================
+Determine whether students are ready to take CSCE 629, so they can decide whether to sign up.
 
-This application was generated with the rails_apps_composer gem:
-https://github.com/RailsApps/rails_apps_composer
-provided by the RailsApps Project:
-http://railsapps.github.io/
+Getting started
+To get started with the app, clone the repo and then install the needed gems:
+
+$ bundle install --without production
+Next, apply database migrations to both the dev and test databases:
+
+$ bundle exec rake db:migrate
+$ bundle exec rake db:migrate RAILS_ENV=test
+$ bundle exec rake db:seed
+Run rspec and cucumber tests to make sure everything is working:
+
+$ rspec
+$ cucumber
+If the tests pass, you'll be ready to run the app in a local server:
+
+$ rails server -p $PORT -b $IP
